--- a/research.qmd
+++ b/research.qmd
@@ -23,7 +23,7 @@ csl: nature-immunology
 
 ::: {.column width="45%"}
 ::: {style="float: left"}
-An estimated 1.5 million HIV+ women give birth per year. Thanks to improved antiretrovirals (and critically, affordable access to them in the most affected countries), vertical transmission of HIV from mother to child is increasingly prevented. These HIV-exposed uninfected (HEU) infants are a growing patient population in many countries.
+An estimated 1.5 million HIV+ women give birth per year[@Slogrove_2020]. Thanks to improved antiretrovirals (and critically, affordable access to them in the most affected countries), vertical transmission of HIV from mother to child is increasingly prevented. These HIV-exposed uninfected (HEU) infants are a growing patient population in many countries[@Eckard_2019].
 :::
 :::
 
@@ -31,7 +31,7 @@ An estimated 1.5 million HIV+ women give birth per year. Thanks to improved anti
 :::
 :::
 
-Despite being born uninfected, during their first six months of life, HEU infants have increased morbidity for respiratory and gastrointestinal infections compared to HIV-unexposed (HU) Infants living in the same communities. It's hypothesized that inflammation at the fetal-maternal interface driven by exposure to maternal virus (and viral proteins) may perturb the developing infant immune system, resulting in the observed increased morbidity in early life. Confoundingly, antiretrovirals (ART) can also drive inflammation at the fetal-maternal interface, and are reported to alter mitochondrial function.
+Despite being born uninfected, during their first six months of life, HEU infants have increased morbidity for respiratory and gastrointestinal infections compared to HIV-unexposed (HU) Infants living in the same communities[@le_Roux_2020]. It's hypothesized that inflammation at the fetal-maternal interface driven by exposure to maternal virus (and viral proteins) may perturb the developing infant immune system, resulting in the observed increased morbidity in early life [@Ikumi_2021, @Goetghebuer_2018] Confoundingly, antiretrovirals (ART) can also drive inflammation at the fetal-maternal interface, and are reported to alter mitochondrial function[@Schoeman_2017].
 
 ![](images/MalawiHEUCohort.png){width="600"}
 
