--- a/index.qmd
+++ b/index.qmd
@@ -21,9 +21,9 @@ page-layout: full
 
 I am a Molecular Microbiology and Immunology PhD Candidate at the University of Maryland, Baltimore. My thesis advisers are Drs. [Cristiana Cairo](https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/) and [Kirsten Lyke.](https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/)
 
-My [thesis research](research.qmd) seeks to understand the impact that prenatal exposure to maternal viral load and antiretrovirals has on Innate-like and Adaptive T cells of HIV-exposed Uninfected Infants during early life. Working with a Malawian clinical cohort, I process cryopreserved cord blood mononuclear cells (CBMCs) and peripheral blood mononuclear cells (PBMCs) for Spectral Flow Cytometry.
+My [thesis research](research.qmd) seeks to understand the impact that prenatal exposure to maternal viral load and antiretrovirals has on Innate-like and Adaptive T cells of HIV-exposed Uninfected Infants at birth and during early life. Working with a Malawian clinical cohort, we processed cryopreserved cord blood mononuclear cells (CBMCs) and peripheral blood mononuclear cells (PBMCs) with 30+ color Spectral Flow Cytometry (SFC) panels. 
 
-When not in lab or thinking about autofluorescence, I enjoy birding, trail running, kayaking, coffee, learning new languages and have occasionally had a plant survive my summer gardening attempts.
+When not in lab (or thinking about autofluorescence), I enjoy birding, trail running, kayaking, coffee, learning new languages and have occasionally had a plant survive my summer gardening attempts.
 :::
 
 ::: {.column width="5%"}
